[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/Scripts/Rifle.gd" type="Script" id=1]
[ext_resource path="res://Player/Sprites/rifle.png" type="Texture" id=2]
[ext_resource path="res://Player/Scenes/MuzzleBlast.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Sounds/rifle.wav" type="AudioStream" id=4]

[node name="Rifle" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 5, 0 )

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 18.0412, -0.395062 )

[node name="MuzzleBlast" parent="." instance=ExtResource( 3 )]

[node name="ShootTimer" type="Timer" parent="."]

[node name="Shot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
